# experimental

./: CMakeLists.txt  FunctionalClient.hpp  FunctionalServer.hpp  TaskFunctional.hpp  cook_client.cpp  cook_code.cpp  cook_http_client.cpp  cook_server.cpp  cook_server_parallel.cpp  examples_code.cpp  main.cpp  module_one.cpp  other_manipulation.cpp  protocol.hpp  reading_from_socket.cpp  stream_client.cpp  writing_to_socket.cpp
code_parts/: client.cpp  common.cpp  server.cpp
code_parts/src/client/: RunClient.cpp  RunClient.hpp
code_parts/src/common/: PerformSome.cpp  PerformSome.hpp  RunCommon.cpp  RunCommon.hpp
code_parts/src/server/: RunServer.cpp  RunServer.hpp
old_code_1/: CMakeLists.txt  TaskFunctional.hpp  cook_server_async.cpp  cook_server_parallel.cpp  examples_code.cpp  module_one.cpp  protocol.hpp  stream_server.cpp  writing_to_socket.cpp
